# Road-safetyy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose-devcontainer.yml  docker-compose-postgres.yml
.devcontainer/db-init/: 02_create_accidents_table.sql  03_create_user_reports.sql
scripts/: run.sh  start-chat-menu.ps1
src/road_safety/: main.py
src/road_safety/bootstrap/: __init__.py  data_seed.py  env.py  geocode_communes.py  run_seed.py
src/road_safety/config/: constants.py  settings.py
src/road_safety/data_access/: utils.py
src/road_safety/data_access/loaders/: accident_loader.py
src/road_safety/data_access/schemas/: accident_schemas.py
src/road_safety/data_access/tables/: __init__.py  accident_table.py
src/road_safety/runners/: accident_analytics.py  accident_chat.py  accident_cli.py  accident_db.py  accident_explorer.py  dashboard.py  insights.py  map_generator.py  pulse.py  report_form.py
tests/: conftest.py
tests/test_road_safety/test_bootstrap/: test_data_seed.py  test_env.py  test_geocode_communes.py  test_run_seed.py
tests/test_road_safety/test_config/: test_constants.py  test_settings.py
tests/test_road_safety/test_data_access/: test_utils_env_bootstrap.py
tests/test_road_safety/test_runners/: test_accident_chat.py  test_accident_db.py  test_accident_explorator.py  test_accident_menu.py  test_dashboard.py  test_insights.py  test_main_chat_route.py  test_main_choice.py  test_map_generator.py  test_pulse.py  test_report_form.py
(+2 files in other folders)
